--- a/style.css
+++ b/style.css
@@ -145,7 +145,9 @@ h1, h2 {
   }
 
   .cell {
-    width: 30%;
-    height: 30%;
+    width: 80%;
+    height: 80%;
+    min-width: 120px;
+    min-height: 120px;
   }
 }
